--- a/index.html
+++ b/index.html
@@ -5,40 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PetPal Care</title>
-    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <style>
-      :root {
-        --primary: #A2D2FF;
-        --secondary: #FFAFCC;
-        --accent: #B8E0D2;
-        --background: #FFFDF7;
-        --highlight: #FFD166;
-        --text-dark: #374151;
-        --text-light: #6b7280;
-      }
-      body {
-        font-family: 'Poppins', sans-serif;
-        background-color: var(--background);
-        color: var(--text-dark);
-      }
-      @keyframes fadeIn {
-        from { opacity: 0; transform: translateY(10px); }
-        to { opacity: 1; transform: translateY(0); }
-      }
-      .animate-fade-in {
-        animation: fadeIn 0.5s ease-out forwards;
-      }
-      @keyframes pulse {
-          0%, 100% { transform: scale(1); box-shadow: 0 0 0 0 rgba(255, 175, 204, 0.7); }
-          50% { transform: scale(1.03); box-shadow: 0 0 0 10px rgba(255, 175, 204, 0); }
-      }
-      .animate-pulse-slow {
-          animation: pulse 2.5s infinite ease-in-out;
-      }
-    </style>
   <script type="importmap">
 {
   "imports": {
@@ -46,13 +15,15 @@
     "recharts": "https://aistudiocdn.com/recharts@^3.3.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "react": "https://aistudiocdn.com/react@^19.2.0"
+    "react": "https://aistudiocdn.com/react@^19.2.0",
+    "vite": "https://aistudiocdn.com/vite@^7.2.2",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.0"
   }
 }
 </script>
 </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
